// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Component <StockLabel {...} /> Should be able to render a "warning" state 1`] = `
<div>
  <div
    class="flex items-center space-x-1 mt-5"
  >
    <div
      class="w-1.5 h-1.5 bg-red-500 animate-ping rounded-full"
    />
    <span
      class="text-xs text-black leading-4"
    >
      5+ pcs. in stock
    </span>
  </div>
</div>
`;

exports[`UI/Component <StockLabel {...} /> Should be able to render the default state 1`] = `
<div>
  <div
    class="flex items-center space-x-1 mt-5"
  >
    <div
      class="w-1.5 h-1.5 bg-hover rounded-full"
    />
    <span
      class="text-xs text-black leading-4"
    >
      20+ pcs. in stock
    </span>
  </div>
</div>
`;
